# rust-todo

./: .gitignore  Cargo.toml  docker-compose.yml
migrations/2021-08-09-065541_create_tasks/: up.sql
src/: lib.rs  main.rs  todo.rs
src/service/: db.rs  mod.rs  schema.rs
src/service/models/: mod.rs  post.rs  task.rs
