[package]
name = "todo_cli"
version = "0.1.0"
authors = ["Nikita Kuprin <nikon5070@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "~1.0.66"
diesel = { version = "~1.4.4", features = ["postgres"] }
diesel_migrations = "~1.4.0"
dotenv = "~0.15.0"